#2452 Moved test entities to test sources.